test(ai): add more test suites